////////////////////////////////////////////////////////////////////////
// This file contains common errors that may be returned by several RPCs,
// defined in several files.
////////////////////////////////////////////////////////////////////////

syntax = "proto3";

package bank.v1;

////////////////////////////////////////////////////////////////////////

// Error returned when a withdrawal would overdraft the account.
message OverdraftError {
  // Amount that we would have overdraft by.
  uint32 amount = 1;
}
